<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5_wrong_answer"
            android:textSize="@dimen/description_text_size"
            android:textStyle="bold"
            android:padding="@dimen/description_padding"
            style="@style/customText"
            android:typeface="serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fun_fact"
            android:textSize="@dimen/description_text_size"
            android:textStyle="bold"
            android:padding="@dimen/description_padding"
            style="@style/customText"
            android:typeface="serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5_fun_fact"
            android:textSize="@dimen/description_text_size"
            android:textStyle="bold"
            android:padding="@dimen/description_padding"
            style="@style/customText"
            android:typeface="serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/better_luck_next_time"
            android:textSize="@dimen/description_text_size"
            android:textStyle="bold"
            android:padding="@dimen/description_padding"
            style="@style/customText"
            android:typeface="serif"/>
        <Button
            style="@style/customText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/question_margin"
            android:layout_weight="1"
            android:background="@drawable/text_backgrounds"
            android:padding="@dimen/answer_padding"
            android:text="@string/reset_button"
            android:textColor="@color/textColor"
            android:textSize="@dimen/question_text_size"
            android:onClick="reset"/>
    </LinearLayout>
</ScrollView>