<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:padding="@dimen/logo_padding"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_description"
            android:textSize="@dimen/description_text_size"
            android:textStyle="bold"
            android:padding="@dimen/description_padding"
            style="@style/customText"
            android:typeface="serif"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prize_1"
            android:textSize="@dimen/description_text_size"
            android:textStyle="bold"
            android:padding="@dimen/description_padding"
            style="@style/customText"
            android:typeface="serif"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:layout_margin="@dimen/logo_padding"
            android:onClick="start"/>

    </LinearLayout>
</ScrollView>
